--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,28 +4,44 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
+		  <p>&copy 2024 Bonner Lab.<br /> Site made with <a href="https://jekyllrb.com">Jekyll</a>; <br />
+              We are part of the Kreiger School of Art and Science at Johns Hopkins University
 
 
 		   <p>  </p><p>
 
 
 		</div>
-		<div class="col-sm-4">
-		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
+
+		<div class="col-sm-4" style="display: flex; align-items: center;">
+			<div style="margin-right: 10px;">
+				<a href="https://twitter.com/michaelfbonner" target="_blank">
+					<img src="{{ site.url }}{{ site.baseurl }}/images/logopic/x_logo.svg" alt="Twitter Logo"
+						style="width:30px; height:auto;">
+				</a>
+			</div>
+			<div>
+				<a href="https://twitter.com/michaelfbonner" target="_blank" style="font-size: 20px;">@michaelfbonner</a>
+			</div>
+
 		</div>
-		<div class="col-sm-4">
-		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+
+		<div class="col-sm-4" style="display: flex; align-items: center;">
+			<div style="margin-right: 10px;">
+				<a href="https://shorturl.at/cVY37" target="_blank">
+					<img src="{{ site.url }}{{ site.baseurl }}/images/logopic/maps_logo.png" alt="Google Maps Logo"
+						style="width:25px; height:auto;">
+				</a>
+			</div>
+			<div>
+				Address: <br>
+				237 Krieger Hall <br>
+				3400 N. Charles Street <br>
+				Baltimore, MD 21218<br>
+			</div>
 		</div>
+
+
 	  </div>
 	</div>
   </div>
