--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,12 +12,13 @@
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
+		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
+		<li><a href="https://bonnerlab.github.io/ccn-tutorial/">CCN Tutorial</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/mick">PI</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Openings</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Join Us</a></li>
 	  </ul>
 	</div>
   </div>
