--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,18 +1,12 @@
-
-<div class="well">
-<h4>News</h4>
-
-<!-- {% for article in site.data.news limit:9 %}
-<p>{{ article.date }}<br>{{ article.headline | markdownify}}</p>
-{% endfor %} -->
-{% for article in site.data.news limit:9 %}
-<div style="margin-bottom: 20px;">
-    <p style="margin-bottom: 2px; font-family: 'Arial', sans-serif;"><em>{{ article.date }}</em><br>{{ article.headline
-        | markdownify }}</p>
-</div>
-{% endfor %}
-
-
-<h5><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h5>
-
+<div class="well" style="width: 300px; margin-top: 30px;">
+    <h4 style="margin-top: -9px;">News</h4>
+    {% for article in site.data.news limit:9 %}
+    <div style="margin-bottom: 20px;">
+        <p style="margin-bottom: 2px; font-family: 'Arial', sans-serif;">
+            <em>{{ article.date }}</em><br>
+            {{ article.headline | markdownify }}
+        </p>
     </div>
+    {% endfor %}
+    <h5><a href="{{ site.url }}{{ site.baseurl }}/allnews.html">... see all News</a></h5>
+</div>
