--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,28 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-	<div class="navbar-header">
-	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-		<span class="sr-only">Toggle navigation</span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	  </button>
-	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Bonner Lab @ Johns Hopkins</a>
-	</div>
-	<div class="collapse navbar-collapse" id="navbar-collapse-1">
-	  <ul class="nav navbar-nav navbar-right">
-		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li> -->
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="https://bonnerlab.github.io/ccn-tutorial/">CCN Tutorial</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/mick">PI</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Join Us</a></li>
-	  </ul>
-	</div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    
+      <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/" style="display: flex; align-items: center;">
+        <img src="{{ site.url }}{{ site.baseurl }}/images/logopic/jhu_shield.png" alt="Hopkins Logo" style="height:30px; margin-top: 25px; margin-left: -10px;">
+        <span>Bonner Lab @ Johns Hopkins</span>
+      </a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <!-- <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li> -->
+        <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+        <li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
+        <li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
+        <li><a href="https://bonnerlab.github.io/ccn-tutorial/">CCN Tutorial</a></li>
+        <!-- <li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Join Us</a></li> -->
+      </ul>
+    </div>
   </div>
 </div>
+
