--- a/_includes/news.html
+++ b/_includes/news.html
@@ -4,7 +4,7 @@
     <div style="margin-bottom: 20px;">
         <p style="margin-bottom: 2px; font-family: 'Arial', sans-serif;">
             <span
-                style="font-family: 'Roboto', 'Open Sans', 'Lato', sans-serif; font-size: 0.9em; color: #f6630e;">{{
+                style="font-family: 'Roboto', 'Open Sans', 'Lato', sans-serif; font-size: 0.9em; color: #b62020;">{{
                 article.date }}</span><br>
             {{ article.headline | markdownify }}
         </p>
